     - Text::wrap() recognises the end of a single-line string correctly.
     - BitmapButton inherits from Gadget instead of Textbox.
     - AnimButton inherits from Gadget instead of Textbox.
     - Textbox no longer redraws when clicked; functionality moved into Button
       and ContextMenuItem classes.
     - Removed redundant DecorationGlyphButton::release().
  
  - New Features:
     - ListBox rewritten to be a single gadget instead of a compound gadget.
     - ListBox allows multiple selection.
     - Added extra flags to AmigaWindow and SkinnedWindow classes allowing close
       and depth gadgets to be hidden when gadgets are constructed.
     - AmigaWindow allows depth and close buttons to be shown/hidden at will.
     - SkinnedWindow allows depth and close buttons to be shown/hidden at will.
     - Screen constructor accepts flags parameter.
     - AmigaScreen constructor accepts flags parameter.
     - SkinnedScreen constructor accepts flags parameter.
     - AmigaScreen allows depth and flip buttons to be shown/hidden at will.
     - SkinnedScreen allows depth and flip buttons to be shown/hidden at will.
     - Added ScrollingListBox class.
     - Added DefaultStyle class for control over gadget default colours.
     - Added DimmedScreen class to the bonus folder.
     - Added Requester class.
     - Added FileRequester class to the bonus folder.
     - Added Window and Screen setTitle() methods.
     - Added drawEllipse() to the SuperBitmap class.
     - Added drawFilledEllipse() to the SuperBitmap class.
     - Added ListData class.
     - Added FilePath class to bonus folder
     - Added gadget test screen to demo.
     - Added release-outside event that fires if the stylus is released outside
       the boundaries of the gadget.
     - Added eventVX and eventVY to EventArgs struct.
     - Drag and move events populate eventVX and eventVY EventArgs properties.
     - Added EVENT_ACTION event.